<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ArticleCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/article_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/place_holder_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/article_cover_description" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
            <TextView android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_place_holder"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView android:id="@+id/article_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtext_placeholder"
                android:layout_marginBottom="20dp"
                android:textSize="14sp" />
            <TextView android:id="@+id/article_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/lorem_ipsum"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>