<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/imageCardView"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/place_holder_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/article_cover_description" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_description_title"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView android:id="@+id/image_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_uploader_name_title"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>